--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/styles.css">
+    <title>CV Alonso Conde</title>
 </head>
+
 <body>
-    Hola mundo [Alonso Conde]
+    <header class="header">
+        <div class="div__header">
+            <a href="#" class="link__div">Personal</a>
+        </div>
+        <nav class="nav__header">
+            <li><a href="#" class="link__nav">Home</a></li>
+            <li><a href="#" class="link__nav">About us</a></li>
+            <li><a href="#" class="link__nav">Service</a></li>
+            <button class="button__nav">Contact Us</button>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="container">
+            <section class="section1__container">
+                <h1 class="section__titulo">Hola! Soy <br><span class="span__naranja">Alonso Conde Sánchez</span></h1>
+                <p class="section__parrafo">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, veniam laudantium quidem
+                    corrupti quos necessitatibus! Maxime corporis neque mollitia ea ex facilis reiciendis. Eligendi,
+                    magni voluptatibus quam sed sit blanditiis.
+                </p>
+                <button class="button__nav btn1">Hire Me</button>
+            </section>
+            <section class="section2__container">
+                <figure class="section2__figure">
+                    <img src="assets/img/nicoCage.png" alt="" class="section2__img">
+                </figure>
+                <div class="section2__div1">
+                    <figure>
+                        <img src="assets/img/diseno-web.png" alt="" class="img__sectiondiv1">
+                    </figure>
+                    <section class="section__text">
+                        <h2>Ui/Ux</h2>
+                        <p class="parrafo__section">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </section>
+                </div>
+                <div class="section2__div2">
+                    <figure>
+                        <img src="assets/img/medal.png" alt="" class="img__sectiondiv1">
+                    </figure>
+                    <section class="section__text2">
+                        <p class="parrafo__section2">Best Design Award</p>
+                    </section>
+                </div>
+            </section>
+        </section>
+        <section>
+            <section class="container2">
+                <section class="section__container2">
+                    <div class="div__container2">
+                        <h2 class="subtitulo__container2">Mis asombrosos <br><span class="span__container2">servicios</span></h2>
+                        <p class="parrafo__container2">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptatem eos quo. Quod
+                            beatae facere, reiciendis voluptatibus non quaerat dolor, eveniet ipsam, vitae cumque libero! At
+                            optio qui ea quidem.
+                        </p>
+                        <button class="btnDownCv">Download CV</button>
+                    </div>
+                </section>
+                <section class="section__container3">
+                    <figure class="figura__emoji">
+                        <img src="assets/img/gafas-de-sol.png" alt="" class="img__desing">
+                    </figure>
+                    <span class="span__design">Design</span>
+                    <p class="parrafo2__container2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error doloremque ratione illo atque
+                        minus magni consectetur.</p>
+                    <button class="btn__learnmore">Learn More</button>
+                </section>
+            </section>
+            <section class="tarjetas__container2">
+                <section class="section__container3 emojimal">
+                    <figure class="figura__emoji">
+                        <img src="assets/img/mal.png" alt="" class="img__desing">
+                    </figure>
+                    <span class="span__design">Developer</span>
+                    <p class="parrafo2__container2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error doloremque ratione illo atque
+                        minus magni consectetur.</p>
+                    <button class="btn__learnmore">Learn More</button>
+                </section>
+                <section class="section__container3 emojicora">
+                    <figure class="figura__emoji">
+                        <img src="assets/img/ojos-del-corazon.png" alt="" class="img__desing">
+                    </figure>
+                    <span class="span__design">Ui/Ux</span>
+                    <p class="parrafo2__container2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error doloremque ratione illo atque
+                        minus magni consectetur.</p>
+                    <button class="btn__learnmore">Learn More</button>
+                </section>
+            </section>
+        </section>
+        
+    </main>
 </body>
+
 </html>
