--- a/index.html
+++ b/index.html
@@ -10,97 +10,198 @@
 </head>
 
 <body>
-    <header class="header">
+    <section class="header">
         <div class="div__header">
-            <a href="#" class="link__div">Personal</a>
+            <a href="#" class="link__div">Inicio</a>
         </div>
         <nav class="nav__header">
-            <li><a href="#" class="link__nav">Home</a></li>
-            <li><a href="#" class="link__nav">About us</a></li>
-            <li><a href="#" class="link__nav">Service</a></li>
+            <li><a href="#container" class="link__nav">Home</a></li>
+            <li><a href="#container2" class="link__nav">Servicios</a></li>
+            <li><a href="#section__container4" class="link__nav">Experiencia</a></li>
+            <li><a href="#section__container5" class="link__nav">Recorrido</a></li>
+            <li><a href="#section8" class="link__nav">Proyectos</a></li>
             <button class="button__nav">Contact Us</button>
         </nav>
-    </header>
-    <main class="main">
-        <section class="container">
-            <section class="section1__container">
-                <h1 class="section__titulo">Hola! Soy <br><span class="span__naranja">Alonso Conde Sánchez</span></h1>
-                <p class="section__parrafo">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, veniam laudantium quidem
-                    corrupti quos necessitatibus! Maxime corporis neque mollitia ea ex facilis reiciendis. Eligendi,
-                    magni voluptatibus quam sed sit blanditiis.
-                </p>
-                <button class="button__nav btn1">Hire Me</button>
-            </section>
-            <section class="section2__container">
-                <figure class="section2__figure">
-                    <img src="assets/img/nicoCage.png" alt="" class="section2__img">
+    </section>
+
+    <section class="container" id="container">
+        <section class="section1__container">
+            <h1 class="section__titulo">Hola! Soy <br><span class="span__naranja">Alonso Conde Sánchez</span></h1>
+            <p class="section__parrafo">
+                Son un estudiante de Ingenieria de sistemas y lo que ves es mi curriculim vitae. Esta pagina fue
+                diseñada con los conocimientos que estoy adquiriendo en el curso de frontEnd del Bootcamp de Tecsup.
+                Soy un amante de la musíca y la buenas peliculas de culto. Y no, no soy Nicolas Cage.
+            </p>
+            <button class="button__nav btn1">Hire Me</button>
+        </section>
+        <section class="section2__container">
+            <figure class="section2__figure">
+                <img src="assets/img/nicoCage.png" alt="" class="section2__img">
+            </figure>
+            <div class="section2__div1">
+                <figure>
+                    <img src="assets/img/diseno-web.png" alt="" class="img__sectiondiv1">
                 </figure>
-                <div class="section2__div1">
-                    <figure>
-                        <img src="assets/img/diseno-web.png" alt="" class="img__sectiondiv1">
-                    </figure>
-                    <section class="section__text">
-                        <h2>Ui/Ux</h2>
-                        <p class="parrafo__section">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                    </section>
-                </div>
-                <div class="section2__div2">
-                    <figure>
-                        <img src="assets/img/medal.png" alt="" class="img__sectiondiv1">
-                    </figure>
-                    <section class="section__text2">
-                        <p class="parrafo__section2">Best Design Award</p>
-                    </section>
+                <section class="section__text">
+                    <h2>Ui/Ux</h2>
+                    <p class="parrafo__section">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </section>
+            </div>
+            <div class="section2__div2">
+                <figure>
+                    <img src="assets/img/medal.png" alt="" class="img__sectiondiv1">
+                </figure>
+                <section class="section__text2">
+                    <p class="parrafo__section2">Best Design Award</p>
+                </section>
+            </div>
+        </section>
+    </section>
+    <section id="container2">
+        <section class="container2">
+            <section class="section__container2">
+                <div class="div__container2">
+                    <h2 class="subtitulo__container2">Mis asombrosos <br><span class="span__container2">servicios</span>
+                    </h2>
+                    <p class="parrafo__container2">
+                        Estos son los servicios que ofrezco, me especializo en el diseño de interfaces en movil y web.
+                        Tu solo dime lo que sueñas y yo
+                        lo haré realidad. Mis trabajos se basan en las
+                    </p>
+                    <button class="btnDownCv">Download CV</button>
                 </div>
             </section>
+            <section class="section__container3">
+                <figure class="figura__emoji">
+                    <img src="assets/img/gafas-de-sol.png" alt="" class="img__desing">
+                </figure>
+                <span class="span__design">Diseño</span>
+                <p class="parrafo2__container2">Puedo darte mis ideas de diseño y poder maquetarte una pagina web o
+                    aplicación movil
+                    desde 0 para que puedas disfrutar y ser la envia de tu competencia.
+                </p>
+                <button class="btn__learnmore">Learn More</button>
+            </section>
+        </section>
+        <section class="tarjetas__container2">
+            <section class="section__container3 emojimal">
+                <figure class="figura__emoji">
+                    <img src="assets/img/mal.png" alt="" class="img__desing">
+                </figure>
+                <span class="span__design">Desarrollo</span>
+                <p class="parrafo2__container2">Si ya tienes una idea de diseño, solo dimela y la tendrás en poco
+                    tiempo. En base a reuniones
+                    podremos hacer realidad lo que sueñas.</p>
+                <button class="btn__learnmore">Learn More</button>
+            </section>
+            <section class="section__container3 emojicora">
+                <figure class="figura__emoji">
+                    <img src="assets/img/ojos-del-corazon.png" alt="" class="img__desing">
+                </figure>
+                <span class="span__design">Ui/Ux</span>
+                <p class="parrafo2__container2">El diseño para tu negocio a tu medida. Este servicio te ayudara si eres
+                    un emprendedor ya que podremos
+                    ver cual es tu Scope en tu negocio y desarrollar una pagina para sobrellevar la carga que lo
+                    conlleva.
+                </p>
+                <button class="btn__learnmore">Learn More</button>
+            </section>
+        </section>
+    </section>
+    <section class="section__container4" id="section__container4">
+        <section class="titulo__container4">
+            <h2 class="subtitulo__container2">Mi experiencia como <br><span class="span__container2">desarrollador y
+                    diseñador</span></h2>
+        </section>
+        <section class="experiencia__section">
+            <figure class="figure__img">
+                <img src="assets/img/android.png" alt="" class="img__exp">
+                <span class="span__design">Android Studio</span>
+            </figure>
+            <figure class="figure__img">
+                <img src="assets/img/html.png" alt="" class="img__exp">
+                <span class="span__design">HTML</span>
+            </figure>
+            <figure class="figure__img">
+                <img src="assets/img/php.png" alt="" class="img__exp">
+                <span class="span__design">PHP</span>
+            </figure>
+            <figure class="figure__img">
+                <img src="assets/img/boot.png" alt="" class="img__exp">
+                <span class="span__design">Bootstrap</span>
+            </figure>
+        </section>
+    </section>
+    <section class="section__container5" id="section__container5">
+        <section class="section__subtitu">
+            <h2 class="subtitulo__container2">Mi experiencia como <br><span class="span__container2">desarrollador y
+                    diseñador</span></h2>
+            <p class="subtitu__parrafo">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aliquam nemo et tenetur
+                repellendus cupiditate, saepe neque facere praesentium consectetur temporibus optio natus ipsum
+                recusandae error labore debitis a dicta!
+            </p>
+            <button class="subtitu__btn">Detalles</button>
         </section>
         <section>
-            <section class="container2">
-                <section class="section__container2">
-                    <div class="div__container2">
-                        <h2 class="subtitulo__container2">Mis asombrosos <br><span class="span__container2">servicios</span></h2>
-                        <p class="parrafo__container2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptatem eos quo. Quod
-                            beatae facere, reiciendis voluptatibus non quaerat dolor, eveniet ipsam, vitae cumque libero! At
-                            optio qui ea quidem.
-                        </p>
-                        <button class="btnDownCv">Download CV</button>
-                    </div>
-                </section>
-                <section class="section__container3">
-                    <figure class="figura__emoji">
-                        <img src="assets/img/gafas-de-sol.png" alt="" class="img__desing">
+            <div class="div__imagenesexpe">
+                <div class="div__imagenes">
+                    <figure>
+                        <img src="assets/img/catologo.png" alt="" class="logos__experiencia">
                     </figure>
-                    <span class="span__design">Design</span>
-                    <p class="parrafo2__container2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error doloremque ratione illo atque
-                        minus magni consectetur.</p>
-                    <button class="btn__learnmore">Learn More</button>
-                </section>
-            </section>
-            <section class="tarjetas__container2">
-                <section class="section__container3 emojimal">
-                    <figure class="figura__emoji">
-                        <img src="assets/img/mal.png" alt="" class="img__desing">
+                    <figure>
+                        <img src="assets/img/cisco-logo-16.png" alt="" class="logos__experiencia">
                     </figure>
-                    <span class="span__design">Developer</span>
-                    <p class="parrafo2__container2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error doloremque ratione illo atque
-                        minus magni consectetur.</p>
-                    <button class="btn__learnmore">Learn More</button>
-                </section>
-                <section class="section__container3 emojicora">
-                    <figure class="figura__emoji">
-                        <img src="assets/img/ojos-del-corazon.png" alt="" class="img__desing">
+                    <figure>
+                        <img src="assets/img/IEEE-Logo.png" alt="" class="logos__experiencia">
                     </figure>
-                    <span class="span__design">Ui/Ux</span>
-                    <p class="parrafo2__container2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, error doloremque ratione illo atque
-                        minus magni consectetur.</p>
-                    <button class="btn__learnmore">Learn More</button>
-                </section>
-            </section>
+                </div>
+                <div class="div__imagenes">
+                    <figure>
+                        <img src="assets/img/office.png" alt="" class="logos__experiencia">
+                    </figure>
+                    <figure>
+                        <img src="" alt="" class="logos__experiencia">
+                    </figure>
+                    <figure>
+                        <img src="" alt="" class="logos__experiencia">
+                    </figure>
+                </div>
+                <div class="div__imagenes">
+                    <figure>
+                        <img src="" alt="" class="logos__experiencia">
+                    </figure>
+                    <figure>
+                        <img src="" alt="" class="logos__experiencia">
+                    </figure>
+                    <figure>
+                        <img src="" alt="" class="logos__experiencia">
+                    </figure>
+                </div>
+            </div>
         </section>
-        
-    </main>
+    </section>
+    <section class="section8" id="section8">
+        <h2 class="subtitulo__section8">Proyectos Recientes</h2>
+        <p class="parrafo__section8">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi iusto dolor qui culpa nihil commodi, ad
+            dolorem reiciendis minus, quasi totam non atque tempora vitae veniam optio labore quas enim.
+        </p>
+        <section class="figures__section8">
+            <figure class="figure__proyectos">
+                <img src="assets/img/b2ap3_large_la-programacin.jpg" alt="" class="img__section8">
+                <button class="btn__proyectos">Ver diseño</button>
+            </figure>
+            <figure class="figure__proyectos">
+                <img src="assets/img/python-lenguaje-programacion-popular-cobol.jpg" alt="" class="img__section8">
+                <button class="btn__proyectos">Ver diseño</button>
+            </figure>
+            <figure class="figure__proyectos">
+                <img src="assets/img/mejores-software-programacion-1280x720.jpg" alt="" class="img__section8">
+                <button class="btn__proyectos">Ver diseño</button>
+            </figure>
+        </section>
+    </section>
 </body>
 
 </html>
