--- a/index.html
+++ b/index.html
@@ -10,108 +10,123 @@
 </head>
 
 <body>
-    <section class="header">
-        <div class="div__header">
-            <a href="#" class="link__div">Inicio</a>
+    <nav class="navbar">
+        <div class="navbrand">
+            <h1><a href="./index.html" class="brand">portafolio</a></h1>
+            <div class="burger" id="burger">
+                <span class="burger-open">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="16">
+                        <g fill="#252a32" fill-rule="evenodd">
+                            <path d="M0 0h24v2H0zM0 7h24v2H0zM0 14h24v2H0z" />
+                        </g>
+                    </svg>
+                </span>
+                <span class="burger-close">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                        <path fill="#252a32" fill-rule="evenodd" d="M17.778.808l1.414 1.414L11.414 10l7.778 7.778-1.414 1.414L10 11.414l-7.778 7.778-1.414-1.414L8.586 10 .808 2.222 2.222.808 10 8.586 17.778.808z" />
+                    </svg>
+                </span>
+            </div>
         </div>
-        <nav class="nav__header">
-            <li><a href="#container" class="link__nav">Home</a></li>
-            <li><a href="#container2" class="link__nav">Servicios</a></li>
-            <li><a href="#section__container4" class="link__nav">Experiencia</a></li>
-            <li><a href="#section__container5" class="link__nav">Recorrido</a></li>
-            <li><a href="#section8" class="link__nav">Proyectos</a></li>
-            <button class="button__nav">Contact Us</button>
-        </nav>
-    </section>
+        <ul class="menu" id="menu">
+            <li class="menu-item"><a href="#container" class="menu-link">Inicio</a></li>
+            <li class="menu-item"><a href="#container2" class="menu-link">Servicios</a></li>
+            <li class="menu-item"><a href="#section__container4" class="menu-link">Aplicaciones</a></li>
+            <li class="menu-item"><a href="#section__container5" class="menu-link">Experiencia</a></li>
+            <li class="menu-item"><a href="#section8" class="menu-link">Proyectos</a></li>
+        </ul>
+        <div class="social">
+            <a href="#" class="social-item"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-item"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-item"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-item"><i class="fab fa-pinterest"></i></a>
+        </div>
+    </nav>
+    
 
     <section class="container" id="container">
         <section class="section1__container">
             <h1 class="section__titulo">Hola! Soy <br><span class="span__naranja">Alonso Conde Sánchez</span></h1>
             <p class="section__parrafo">
-                Son un estudiante de Ingenieria de sistemas y lo que ves es mi curriculim vitae. Esta pagina fue
-                diseñada con los conocimientos que estoy adquiriendo en el curso de frontEnd del Bootcamp de Tecsup.
-                Soy un amante de la musíca y la buenas peliculas de culto. Y no, no soy Nicolas Cage.
+                Son un estudiante de Ingeniería de sistemas y lo que ves es mi curriculim vitae. Esta página fue
+                diseñada con los conocimientos que estoy adquiriendo en el curso de FrontEnd del Bootcamp de Tecsup.
+                Soy un amante de la música y las buenas películas de culto. Y no, no soy Nicolas Cage.
             </p>
-            <button class="button__nav btn1">Hire Me</button>
+            <button class="button__nav btn1">Contratame!</button>
         </section>
         <section class="section2__container">
             <figure class="section2__figure">
-                <img src="assets/img/nicoCage.png" alt="" class="section2__img">
+                <img src="https://i.pinimg.com/originals/03/8a/f5/038af54e17406e50e71696196c239d8e.png" alt="" class="section2__img">
             </figure>
             <div class="section2__div1">
                 <figure>
-                    <img src="assets/img/diseno-web.png" alt="" class="img__sectiondiv1">
+                    <img src="assets/img/diseno-web.png"  alt="" class="img__sectiondiv1">
                 </figure>
                 <section class="section__text">
                     <h2>Ui/Ux</h2>
-                    <p class="parrafo__section">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <p class="parrafo__section">Quisiera especializarme en diseño Experiencia del usuario e interfaz del usuario.</p>
                 </section>
             </div>
-            <div class="section2__div2">
-                <figure>
-                    <img src="assets/img/medal.png" alt="" class="img__sectiondiv1">
-                </figure>
-                <section class="section__text2">
-                    <p class="parrafo__section2">Best Design Award</p>
-                </section>
-            </div>
+            
         </section>
     </section>
-    <section id="container2">
+    <section id="container2" class="">
         <section class="container2">
             <section class="section__container2">
                 <div class="div__container2">
                     <h2 class="subtitulo__container2">Mis asombrosos <br><span class="span__container2">servicios</span>
                     </h2>
                     <p class="parrafo__container2">
-                        Estos son los servicios que ofrezco, me especializo en el diseño de interfaces en movil y web.
+                        Estos son los servicios que ofrezco, me especializo en el diseño de interfaces en móvil y web.
                         Tu solo dime lo que sueñas y yo
-                        lo haré realidad. Mis trabajos se basan en las
+                        lo haré realidad. Mis trabajos se basan en las experiencias que puedan experimentar tus usuarios creando momentos y recuerdos que harán que tu servicio sea inolvidable.
                     </p>
-                    <button class="btnDownCv">Download CV</button>
+                    <button class="btnDownCv">Descargar CV</button>
                 </div>
             </section>
+        </section>
+        <section class="section__container333">
             <section class="section__container3">
                 <figure class="figura__emoji">
                     <img src="assets/img/gafas-de-sol.png" alt="" class="img__desing">
                 </figure>
                 <span class="span__design">Diseño</span>
-                <p class="parrafo2__container2">Puedo darte mis ideas de diseño y poder maquetarte una pagina web o
-                    aplicación movil
-                    desde 0 para que puedas disfrutar y ser la envia de tu competencia.
+                <p class="parrafo2__container2">Puedo darte mis ideas de diseño y poder maquetarte una página web o
+                    aplicación móvil
+                    desde 0 para que puedas disfrutar y ser la envía de tu competencia.
+
                 </p>
-                <button class="btn__learnmore">Learn More</button>
+                <button class="btn__learnmore">Aprende más</button>
             </section>
-        </section>
-        <section class="tarjetas__container2">
-            <section class="section__container3 emojimal">
-                <figure class="figura__emoji">
-                    <img src="assets/img/mal.png" alt="" class="img__desing">
-                </figure>
-                <span class="span__design">Desarrollo</span>
-                <p class="parrafo2__container2">Si ya tienes una idea de diseño, solo dimela y la tendrás en poco
-                    tiempo. En base a reuniones
-                    podremos hacer realidad lo que sueñas.</p>
-                <button class="btn__learnmore">Learn More</button>
+            <section class="tarjetas__container2" id="tarjetas__container2">
+                <section class="section__container3 emojimal">
+                    <figure class="figura__emoji">
+                        <img src="assets/img/mal.png" alt="" class="img__desing">
+                    </figure>
+                    <span class="span__design">Desarrollo</span>
+                    <p class="parrafo2__container2">Si ya tienes una idea de diseño, solo dímela y la tendrás en poco
+                        tiempo. En base a reuniones
+                        podremos hacer realidad lo que sueñas.</p>
+                    <button class="btn__learnmore">Aprende más</button>
+                </section>
             </section>
-            <section class="section__container3 emojicora">
+            <section class="section__container3 emojicora" id="container3">
                 <figure class="figura__emoji">
                     <img src="assets/img/ojos-del-corazon.png" alt="" class="img__desing">
                 </figure>
                 <span class="span__design">Ui/Ux</span>
                 <p class="parrafo2__container2">El diseño para tu negocio a tu medida. Este servicio te ayudara si eres
                     un emprendedor ya que podremos
-                    ver cual es tu Scope en tu negocio y desarrollar una pagina para sobrellevar la carga que lo
+                    ver cuál es tu Scope en tu negocio y desarrollar una página para sobrellevar la carga que lo
                     conlleva.
                 </p>
-                <button class="btn__learnmore">Learn More</button>
+                <button class="btn__learnmore">Aprende más</button>
             </section>
         </section>
     </section>
     <section class="section__container4" id="section__container4">
         <section class="titulo__container4">
-            <h2 class="subtitulo__container2">Mi experiencia como <br><span class="span__container2">desarrollador y
-                    diseñador</span></h2>
+            <h2 class="subtitulo__container2">Leguajes y aplicaciones que <br><span class="span__container2">me encanta usar</span></h2>
         </section>
         <section class="experiencia__section">
             <figure class="figure__img">
@@ -137,9 +152,10 @@
             <h2 class="subtitulo__container2">Mi experiencia como <br><span class="span__container2">desarrollador y
                     diseñador</span></h2>
             <p class="subtitu__parrafo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus aliquam nemo et tenetur
-                repellendus cupiditate, saepe neque facere praesentium consectetur temporibus optio natus ipsum
-                recusandae error labore debitis a dicta!
+                Estudié en el colegio San Francisco de Asís primaria y secundaria, obtuve diplomas y certificados en Word y Prezi
+                en mis estudios profesionales estudié Ingeniería de sistemas en la Universidad Católica de Santa María, participé
+                en concursos de programación de la IEEE y aprendí muchísimos lenguajes de programación y metodologías.
+
             </p>
             <button class="subtitu__btn">Detalles</button>
         </section>
@@ -161,21 +177,21 @@
                         <img src="assets/img/office.png" alt="" class="logos__experiencia">
                     </figure>
                     <figure>
-                        <img src="" alt="" class="logos__experiencia">
+                        <img src="assets/img/php.png" alt="" class="logos__experiencia">
                     </figure>
                     <figure>
-                        <img src="" alt="" class="logos__experiencia">
+                        <img src="assets/img/1366_2000.png" alt="" class="logos__experiencia">
                     </figure>
                 </div>
                 <div class="div__imagenes">
                     <figure>
-                        <img src="" alt="" class="logos__experiencia">
+                        <img src="assets/img/koti.png" alt="" class="logos__experiencia">
                     </figure>
                     <figure>
-                        <img src="" alt="" class="logos__experiencia">
+                        <img src="assets/img/pmbok.png" alt="" class="logos__experiencia">
                     </figure>
                     <figure>
-                        <img src="" alt="" class="logos__experiencia">
+                        <img src="assets/img/sanfran.png" alt="" class="logos__experiencia">
                     </figure>
                 </div>
             </div>
@@ -184,8 +200,7 @@
     <section class="section8" id="section8">
         <h2 class="subtitulo__section8">Proyectos Recientes</h2>
         <p class="parrafo__section8">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi iusto dolor qui culpa nihil commodi, ad
-            dolorem reiciendis minus, quasi totam non atque tempora vitae veniam optio labore quas enim.
+            Aquí algunos de mis proyectos favoritos, dales un vistazo...
         </p>
         <section class="figures__section8">
             <figure class="figure__proyectos">
@@ -202,6 +217,18 @@
             </figure>
         </section>
     </section>
+
+    <script>
+        const burgerMenu = document.getElementById("burger");
+        const navbarMenu = document.getElementById("menu");
+
+        // Responsive Navbar Toggle
+        burgerMenu.addEventListener("click", function () {
+            navbarMenu.classList.toggle("active");
+            burgerMenu.classList.toggle("active");
+        });
+
+    </script>
 </body>
 
 </html>
